collect snowflake stats about 24 hours

--- a/playbooks/roles/info-snowflake/tasks/clients.yaml
+++ b/playbooks/roles/info-snowflake/tasks/clients.yaml
@@ -1,8 +1,8 @@
 ---
-- name: Get clients of the (up to) last 12 hours (sorted from newest to oldest)
+- name: Get clients of the last 24 hours (sorted from newest to oldest)
   changed_when: false
   ansible.builtin.shell: >-
-    journalctl -u snowflake-proxy --since "12 hour ago" -r -g ', there were .* connections' -q | awk '{ print $14 }' | xargs
+    journalctl -u snowflake-proxy --since "24 hour ago" -r -g ', there were .* connections' -q | awk '{ print $14 }' | xargs
   register: result
 
 - name: File results for clients
