--- a/playbooks/roles/info/tasks/log-system.yaml
+++ b/playbooks/roles/info/tasks/log-system.yaml
@@ -9,4 +9,4 @@
 - name: Findings of log-system since {{ log_system_since }}
   ansible.builtin.debug:
     var: result.stdout_lines
-  when: result.stdout_lines | length > 0
+  when: result.stdout_lines | length > 0 and result.stdout_lines[0] != "-- No entries --"
