--- a/playbooks/roles/setup/files/20-tor-relay.conf
+++ b/playbooks/roles/setup/files/20-tor-relay.conf
@@ -1,15 +1,15 @@
 # DDoS
-#
-
 net.ipv4.tcp_syncookies = 1
 net.ipv4.tcp_max_syn_backlog = 65535
 net.core.somaxconn = 65535
 
 # https://kernsec.org/wiki/index.php/Kernel_Self_Protection_Project#CONFIGs
-#
 
-# Try to keep kernel address exposures out of various /proc files (kallsyms, modules, etc).
+# Try to keep kernel address exposures out of various /proc files (kallsyms, modules, etc). (There is no CONFIG for the changing the initial value.)
 kernel.kptr_restrict = 1
+
+# Avoid kernel memory address exposures via dmesg (this value can also be set by CONFIG_SECURITY_DMESG_RESTRICT).
+kernel.dmesg_restrict = 1
 
 # Block non-uid-0 profiling (needs distro patch, otherwise this is the same as "= 2")
 kernel.perf_event_paranoid = 3
@@ -22,6 +22,9 @@ kernel.yama.ptrace_scope = 1
 
 # Disable User Namespaces, as it opens up a large attack surface to unprivileged users.
 user.max_user_namespaces = 0
+
+# Disable tty line discipline autoloading (see CONFIG_LDISC_AUTOLOAD).
+dev.tty.ldisc_autoload = 0
 
 # Turn off unprivileged eBPF access.
 kernel.unprivileged_bpf_disabled = 1
