--- a/playbooks/roles/info-snowflake/tasks/log-proxy.yaml
+++ b/playbooks/roles/info-snowflake/tasks/log-proxy.yaml
@@ -2,7 +2,8 @@
 - name: Get proxy logs except clients
   changed_when: false
   ansible.builtin.shell: >-
-    journalctl -u snowflake-proxy --since "{{ log_proxy_since }}" -g '^[, there were .* connections]' -q
+    journalctl -u snowflake-proxy --since "{{ log_proxy_since }}" -q |
+    grep -v -e  ', there were .* connections' -e ': sctp ERROR: .* stream 1 not found'
   register: result
   failed_when: result.stderr_lines | length > 0
 
