add version for snowflake

--- a/playbooks/roles/info-snowflake/tasks/main.yaml
+++ b/playbooks/roles/info-snowflake/tasks/main.yaml
@@ -13,3 +13,8 @@
   ansible.builtin.import_tasks: uptime.yaml
   tags:
     - uptime
+
+- name: Version of Snowflake
+  ansible.builtin.import_tasks: version.yaml
+  tags:
+    - version
