--- a/playbooks/roles/info-snowflake/tasks/clients.yaml
+++ b/playbooks/roles/info-snowflake/tasks/clients.yaml
@@ -2,7 +2,7 @@
 - name: Get clients of the last 24 hours (sorted from newest to oldest)
   changed_when: false
   ansible.builtin.shell: >-
-    journalctl -u snowflake-proxy --since "24 hour ago" -r -g ', there were .* connections' -q | awk '{ print $14 }' | xargs
+    journalctl -u snowflake-proxy --since "25 hour ago" -r -g ', there were .* connections' -q | awk '{ print $14 }' | tail -n 24 | xargs
   register: result
 
 - name: File results for clients
