do not export facts

--- a/inventory/group_vars/public.yaml
+++ b/inventory/group_vars/public.yaml
@@ -6,7 +6,7 @@ torrc_public:
   - name: "PublishServerDescriptor"
     value: "bridge"
   - name: "Nickname"
-    value: "{{ (nickname_prefix + ansible_hostname)[:19] }}"
+    value: "{{ (nickname_prefix + ansible_facts.hostname)[:19] }}"
   - name: "ContactInfo"
     value: "{{ contact_info }}"
 
