--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,10 +6,10 @@ forks = 50
 pipelining = True
 poll_interval = 5
 
+inject_facts_as_vars = false
 fact_caching = jsonfile
 fact_caching_connection = ./.ansible_facts
-fact_caching_timeout = 86400
-
+fact_caching_timeout = 7200
 gathering = smart
 
 strategy = free
