--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -2,10 +2,10 @@
 log_notice: "/var/log/tor/notice.log"
 log_warn: "/var/log/tor/warn.log"
 
-ipv4: "{{ ansible_default_ipv4.address }}"
-ipv6: "{{ ansible_default_ipv6.address }}"
+ipv4: "{{ ansible_facts.default_ipv4.address }}"
+ipv6: "{{ ansible_facts.default_ipv6.address }}"
 
-or_port: "{{ range(1024, 65535) | random(seed=seed_or_port + ansible_hostname + ipv4 + '[' + ipv6 + ']') }}"
+or_port: "{{ range(1024, 65535) | random(seed=seed_or_port + ansible_facts.hostname + ipv4 + '[' + ipv6 + ']') }}"
 
 torrc_generic:
   - name: "Log notice file"
