--- a/playbooks/roles/info-tor/tasks/bridgeline.yaml
+++ b/playbooks/roles/info-tor/tasks/bridgeline.yaml
@@ -11,29 +11,21 @@
   no_log: true
   changed_when: false
   ansible.builtin.command: cut -f 2 -d ' ' /var/lib/tor/fingerprint
-  register: result
-
-- name: Set fp variable
-  no_log: true
-  ansible.builtin.set_fact:
-    _fingerprint: "{{ result.stdout_lines[0] }}"
+  register: _fingerprint
+  failed_when: _fingerprint.stdout_lines | length != 1 or _fingerprint.stderr_lines | length > 0
 
 - name: Get certificate
   no_log: true
   changed_when: false
   ansible.builtin.command: grep -Eo 'cert=\S+' /var/lib/tor/pt_state/obfs4_bridgeline.txt
-  register: result
-
-- name: Set the cert
-  no_log: true
-  ansible.builtin.set_fact:
-    _cert: "{{ result.stdout_lines[0] }}"
+  register: _cert
+  failed_when: _cert.stdout_lines | length != 1 or _cert.stderr_lines | length > 0
 
 - name: File results for bridgeline
   no_log: true
   delegate_to: localhost
   ansible.builtin.lineinfile:
-    line: "Bridge obfs4 {{ '%41s' | format(item) }}:{{ '%-5s' | format(obfs4_port) }} {{ _fingerprint }} {{ _cert }} iat-mode=0  # {{ ansible_hostname }}"
+    line: "Bridge obfs4 {{ '%41s' | format(item) }}:{{ '%-5s' | format(obfs4_port) }} {{ _fingerprint.stdout_lines[0] }} {{ _cert.stdout_lines[0] }} iat-mode=0  # {{ ansible_facts.hostname }}"
     path: /tmp/{{ group_names[0] }}_bridgeline
     create: yes
     mode: "0600"
