--- a/playbooks/roles/info-tor/tasks/clients.yaml
+++ b/playbooks/roles/info-tor/tasks/clients.yaml
@@ -14,6 +14,6 @@
   delegate_to: localhost
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_hostname }} {{ result.stdout }}"
+    line: "{{ ansible_facts.hostname }} {{ result.stdout }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_clients"
-    regex: "^{{ ansible_hostname }} "
+    regex: "^{{ ansible_facts.hostname }} "
