--- a/playbooks/roles/info/tasks/uname.yaml
+++ b/playbooks/roles/info/tasks/uname.yaml
@@ -8,6 +8,6 @@
   delegate_to: localhost
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_hostname }} {{ result.stdout }}"
+    line: "{{ ansible_facts.hostname }} {{ result.stdout }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_uname"
-    regex: "^{{ ansible_hostname }} "
+    regex: "^{{ ansible_facts.hostname }} "
