--- a/playbooks/roles/setup/tasks/network.yaml
+++ b/playbooks/roles/setup/tasks/network.yaml
@@ -1,25 +1,16 @@
 ---
-- name: Get ipv6 netmask
-  delegate_to: localhost
-  changed_when: false
-  check_mode: false
-  ansible.builtin.shell: |
-    hcloud server list --output columns=name,ipv6 | awk '/^{{ ansible_facts.hostname }} / { print $2 }' | sed -e 's,::/64,,'
-  register: _ipv6_prefix
-  failed_when: _ipv6_prefix.stdout_lines | length != 1 or _ipv6_prefix.stderr_lines | length > 0
-
 # avoid [<prefix>::1] till [<prefix>::254] (hint: these are hex numbers, e.g.: 0x254 == 596)
 # so given the DNAT6 rule below this means eventually to not use the first 1024 addresses
 - name: Dice ipv6 subnet values
   ansible.builtin.set_fact:
-    _a: "{{ range(0,65535) | random(seed=seed_or_port + ansible_facts.hostname + ipv4 + 'A' + _ipv6_prefix.stdout) }}"
-    _b: "{{ range(0,65535) | random(seed=seed_or_port + ansible_facts.hostname + ipv4 + 'B' + _ipv6_prefix.stdout) }}"
-    _c: "{{ range(0,65535) | random(seed=seed_or_port + ansible_facts.hostname + ipv4 + 'C' + _ipv6_prefix.stdout) }}"
-    _d: "{{ range(1024,65535) | random(seed=seed_or_port + ansible_facts.hostname + ipv4 + 'D' + _ipv6_prefix.stdout) }}"
+    _a: "{{ range(0,65535) | random(seed=seed_or_port + ansible_facts.hostname + ipv4 + 'A' + ipv6_prefix) }}"
+    _b: "{{ range(0,65535) | random(seed=seed_or_port + ansible_facts.hostname + ipv4 + 'B' + ipv6_prefix) }}"
+    _c: "{{ range(0,65535) | random(seed=seed_or_port + ansible_facts.hostname + ipv4 + 'C' + ipv6_prefix) }}"
+    _d: "{{ range(1024,65535) | random(seed=seed_or_port + ansible_facts.hostname + ipv4 + 'D' + ipv6_prefix) }}"
 
 - name: Compile global scope ipv6 address
   ansible.builtin.set_fact:
-    _ipv6: "{{ _ipv6_prefix.stdout }}:{{ '%x' % (_a | int) }}:{{ '%x' % (_b | int) }}:{{ '%x' % (_c | int) }}:{{ '%x' % (_d | int) }}"
+    _ipv6: "{{ ipv6_prefix }}:{{ '%x' % (_a | int) }}:{{ '%x' % (_b | int) }}:{{ '%x' % (_c | int) }}:{{ '%x' % (_d | int) }}"
 
 - name: Ensure that Hetzner network configurator is deactivated
   ansible.builtin.copy:
@@ -71,7 +62,7 @@
     table: nat
     chain: PREROUTING
     protocol: tcp
-    destination: "! {{ _ipv6_prefix.stdout }}::/118"
+    destination: "! {{ ipv6_prefix }}::/118"
     jump: DNAT
     to_destination: "{{ _ipv6 }}"
 
