--- a/playbooks/roles/setup/tasks/main.yaml
+++ b/playbooks/roles/setup/tasks/main.yaml
@@ -32,7 +32,7 @@
         - system
 
     - name: Network
-      ansible.builtin.import_tasks: network.yaml
+      ansible.builtin.include_tasks: network.yaml
       when: ansible_facts.bios_vendor == 'Hetzner' and ipv6 is match ("::1$")
       tags:
         - network
