--- a/playbooks/roles/info-tor/tasks/log-notice.yaml
+++ b/playbooks/roles/info-tor/tasks/log-notice.yaml
@@ -1,7 +1,8 @@
 ---
 - name: Get last {{ log_lines }} lines of {{ log_notice }}
   changed_when: false
-  ansible.builtin.command: /usr/bin/tail -n {{ log_lines }} {{ log_notice }}
+  ansible.builtin.shell: |
+    grep -v -e 'The IPv4 ORPort address 127.0.0.1 does not match the descriptor address' {{ log_notice }} | tail -n {{ log_lines }}
   register: result
 
 - name: Results of log-notice {{ log_lines }} last lines
