--- a/playbooks/roles/info-snowflake/tasks/version.yaml
+++ b/playbooks/roles/info-snowflake/tasks/version.yaml
@@ -4,13 +4,24 @@
   check_mode: false
   ansible.builtin.shell: >-
     /usr/bin/proxy --version 2>&1 | cut -f 2- -d ' '
-  register: result
-  failed_when: result.stdout_lines | length != 1 or result.stderr_lines | length > 0
+  register: _proxy_version
+  failed_when: _proxy_version.stdout_lines | length != 1 or _proxy_version.stderr_lines | length > 0
+
+- name: Get HEAD of repo
+  become: yes
+  become_user: snowflake
+  changed_when: false
+  check_mode: false
+  ansible.builtin.command: git describe
+  args:
+    chdir: /home/snowflake/repo
+  register: _git_version
+  failed_when: _git_version.stdout_lines | length != 1 or _git_version.stderr_lines | length > 0
 
 - name: File results for version
   delegate_to: localhost
   ansible.builtin.lineinfile:
     create: yes
-    line: "{{ ansible_facts.hostname }} {{ result.stdout_lines[0] }}"
+    line: "{{ ansible_facts.hostname }} {{ _proxy_version.stdout_lines[0] }} {{ _git_version.stdout_lines[0] }}"
     path: "{{ tmp_dir }}/{{ group_names[0] }}_version"
     regex: "^{{ ansible_facts.hostname }} "
