save ip v4 firewall state

--- a/playbooks/roles/setup-tor/tasks/firewall.yaml
+++ b/playbooks/roles/setup-tor/tasks/firewall.yaml
@@ -31,3 +31,10 @@
   become: true
   ansible.builtin.shell: /root/firewall-stop.sh
   when: result is failed
+
+- name: Save new iptables state
+  community.general.iptables_state:
+    ip_version: ipv4
+    state: saved
+    path: /etc/iptables/rules.v4
+  when: result is not failed
