--- a/playbooks/roles/setup-tor/tasks/main.yaml
+++ b/playbooks/roles/setup-tor/tasks/main.yaml
@@ -26,11 +26,11 @@
       group: root
       mode: "0644"
   block:
-    - name: Tor Firewall
+    - name: Firewall
       ansible.builtin.import_tasks: firewall.yaml
       tags:
+        - firewall
         - tor
-        - tor-firewall
     - name: Tor
       ansible.builtin.import_tasks: tor.yaml
       tags:
