--- a/site-setup.yaml
+++ b/site-setup.yaml
@@ -2,5 +2,7 @@
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 ---
-- import_playbook: playbooks/setup.yaml
-- import_playbook: playbooks/info.yaml
+- name: Import Setup
+  import_playbook: playbooks/setup.yaml
+- name: Import Info
+  import_playbook: playbooks/info.yaml
