--- a/playbooks/roles/info-snowflake/tasks/version.yaml
+++ b/playbooks/roles/info-snowflake/tasks/version.yaml
@@ -7,12 +7,12 @@
   register: _proxy_version
   failed_when: _proxy_version.stdout_lines | length != 1 or _proxy_version.stderr_lines | length > 0
 
-- name: Get HEAD of repo
+- name: Get HEAD of repository
   become: yes
   become_user: snowflake
   changed_when: false
   check_mode: false
-  ansible.builtin.command: git describe
+  ansible.builtin.command: git describe # noqa: command-instead-of-module
   args:
     chdir: /home/snowflake/repo
   register: _git_version
